<resources>
    <string name="app_name">Новости БГУИР</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bsuir_site">https://www.bsuir.by</string>
    <string name="home_click">Home</string>
    <string name="main_navigation_drawer">Главная</string>
    <string name="achievement">Достижения</string>
    <string name="education">Образование</string>
    <string name="science">Наука</string>
    <string name="entership">Сотрудничество</string>
    <string name="society">Общество</string>
    <string name="sport">Спорт и досуг</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="downloading_text">Загрузка данных </string>
    <string name="navigation_drawer_news_subclass">Новости</string>

</resources>
