<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/main_navigation_drawer" />

        <item android:title="@string/navigation_drawer_news_subclass">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_achivement"
                        android:icon="@drawable/ic_star_black"
                        android:title="@string/achievement" />
                    <item
                        android:id="@+id/nav_education"
                        android:icon="@drawable/ic_school_black"
                        android:title="@string/education" />
                    <item
                        android:id="@+id/nav_science"
                        android:icon="@drawable/ic_library_black"
                        android:title="@string/science" />
                    <item
                        android:id="@+id/nav_entership"
                        android:icon="@drawable/ic_language_black"
                        android:title="@string/entership" />
                    <item
                        android:id="@+id/nav_society"
                        android:icon="@drawable/ic_group_black"
                        android:title="@string/society" />
                    <item
                        android:id="@+id/nav_sport"
                        android:icon="@drawable/ic_pool_black"
                        android:title="@string/sport" />

                </group>
            </menu>
        </item>
    </group>
</menu>